# GA-TRT

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CD.yml  docs.yml  test.yml
docs/: conf.py  index.rst
docs/sources/code/: Methods.md  TRTData.rst
docs/sources/code/Methods/: ILS.rst
examples/data/: Dinsl.csv  Linz.csv  Ravensburg.csv
pyTRT/: __init__.py
pyTRT/methods/: ILS.py  __init__.py  baseclass.py
pyTRT/utils/: __init__.py  load_data.py
test/: test_ils.py  test_load_data.py
test/data/: test_linz_dt.csv
