[metadata]
name = pyTRT
version = 0.0.2
description = A package for TRT analysis
author = Wouter Peere
author_email = info@ghetool.eu
long_description_content_type = text/markdown
long_description = file: README.md, LICENSE, CHANGELOG.md
keywords = Geothermal, Ground-source, Ground heat exchangers, TRT, thermal response test
url = https://github.com/wouterpeere/pytrt
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Utilities

[options]
packages = find:
install_requires =
    numpy >= 1.26.4
    pandas >= 1.4.3
    pygfunction >= 2.3.0

python_requires = >=3.10

[options.extras_require]
doc =
    numpydoc >= 1.7.0
    recommonmark >= 0.7.1
    sphinx >= 7.3.7

testing =
    pytest >= 7.4.4
    pytest-cov >= 6.1.1

[options.packages.find]
exclude =
    doc*
    examples*
    tests*